--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ body{
 .button{
   position: relative;
   display: block;
-  
+
   border: none;
   background-color: transparent;
   cursor: pointer;
@@ -1336,6 +1336,11 @@ ul.basket-navigation li{
   background-color: #f6dada;
 }
 
+.modal-write-us input.invalid,
+.modal-write-us textarea.invalid{
+  background-color: #f6dada;
+}
+
 .modal-write-us input{
   height: 50px;
 }
@@ -1479,23 +1484,26 @@ header.inner-header{
 
 .main-wrap{
   display: flex;
+  position: relative;
+}
+
+.main-wrap::before{
+  display: block;
+  position: absolute;
+  right: 100%;
+  top: 0;
+  height: 100%;
+  width: calc((100vw - 1160px) / 2);
+
+  background-color: #eeeeee;
+  content: "";
 }
 
 /* ---- Filter ---- */
 
 .flex-wrap{
   display: flex;
-}
-
-.left-spacer{
-  flex-grow: 1;
-  background: linear-gradient(to bottom, #dbdbdb 5.45%, #efefef 5.45%, #efefef 100%);
-}
-
-.right-spacer{
-  flex-grow: 1;
-  z-index: 1;
-  background: linear-gradient(to bottom, #ebebeb 5.45%, #ffffff 5.45%, #ffffff 100%);
+  overflow: hidden;
 }
 
 .filter{
@@ -1771,17 +1779,14 @@ input[type="radio"]:disabled + label.bluetooth-choice-label{
 }
 
 .main-box h2::before{
-  display: none;
-
+  display: block;
   position: absolute;
-  left: 0;
+  right: 100%;
   top: 0;
-
-  height: 76px;
-  width: 100%;
+  height: 70px;
+  width: calc((100vw - 1160px) / 2);
 
   background-color: #dbdbdb;
-
   content: "";
 }
 
@@ -1790,12 +1795,25 @@ input[type="radio"]:disabled + label.bluetooth-choice-label{
   align-items: center;
   justify-content: space-between;
 
-  min-width: 840px;
+  position: relative;
+  min-width: 832px;
   padding-left: 70px;
 
   background-color: #ebebeb;
 
   z-index: 2;
+}
+
+.main-box .sort::after{
+  display: block;
+  position: absolute;
+  left: 100%;
+  top: 0;
+  height: 70px;
+  width: calc((100vw - 1160px) / 2);
+
+  background-color: #ebebeb;
+  content: "";
 }
 
 .sort .sort-wrapper{
