--- a/css/style.css
+++ b/css/style.css
@@ -1764,6 +1764,7 @@ input[type="radio"]:disabled + label.bluetooth-choice-label{
   position: relative;
   width: 332px;
   height: 70px;
+  z-index: 3;
 
   margin: 0;
   padding-left: 66px;
