--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@font-face {
+@font-face{
   font-family: "Gilroy";
   src: url("../fonts/gilroylight.woff2") format("woff2"),
        url("../fonts/gilroylight.woff") format("woff");
@@ -6,7 +6,7 @@
   font-style: normal;
 }
 
-@font-face {
+@font-face{
   font-family: "Gilroy";
   src: url("../fonts/gilroyextrabold.woff2") format("woff2"),
        url("../fonts/gilroyextrabold.woff") format("woff");
@@ -14,7 +14,7 @@
   font-style: normal;
 }
 
-@font-face {
+@font-face{
   font-family: "Open Sans";
   src: url("../fonts/opensanslight.woff2") format("woff2"),
        url("../fonts/opensanslight.woff") format("woff");
@@ -22,7 +22,7 @@
   font-style: normal;
 }
 
-@font-face {
+@font-face{
   font-family: "Open Sans";
   src: url("../fonts/opensans.woff2") format("woff2"),
        url("../fonts/opensans.woff") format("woff");
@@ -30,7 +30,7 @@
   font-style: normal;
 }
 
-@keyframes bounce {
+@keyframes bounce{
   0% {
     transform: translate(-50%, -2000px);
   }
@@ -48,7 +48,7 @@
   }
 }
 
-@keyframes shake {
+@keyframes shake{
   0%,
   100% {
     transform: translate(-50%, -50%);
@@ -70,31 +70,31 @@
   }
 }
 
-.visually-hidden {
-	position: absolute;
-	clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
-	clip: rect(1px, 1px, 1px, 1px);
-	padding:0;
-	border:0;
-	height: 1px;
-	width: 1px;
-	overflow: hidden;
+.visually-hidden{
+  position: absolute;
+  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  padding:0;
+  border:0;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
 }
 
-html {
+html{
   box-sizing: border-box;
 }
 
-*, *::before, *::after {
+*, *::before, *::after{
   box-sizing: inherit;
 }
 
-img {
+img{
   max-width: 100%;
   height: auto;
 }
 
-a {
+a{
   text-decoration: none;
   color: #000000;
 }
@@ -184,7 +184,7 @@ body{
   width: 1045px;
 
   margin: 0 auto;
-  padding-bottom: 34px;
+  padding-bottom: 32px;
 }
 
 .header ul{
@@ -205,6 +205,12 @@ body{
 
 .header a:active{
   opacity: 0.3;
+}
+
+.header a.logo:hover,
+.header a.logo:active{
+	opacity: 1;
+	cursor: auto;
 }
 
 .header form.search{
@@ -232,7 +238,7 @@ body{
   opacity: 0.6;
 }
 
-.search input[type="search"]:focus {
+.search input[type="search"]:focus{
   margin-bottom: -2px;
 
   opacity: 1;
@@ -393,7 +399,7 @@ ul.basket-navigation li{
   text-transform: none;
 }
 
-.site-navigation .drop-menu:hover
+.site-navigation .drop-menu:hover,
 .site-navigation .drop-menu:focus{
   display: flex;
 }
@@ -762,7 +768,7 @@ ul.basket-navigation li{
   top: 12px;
   right: -264px;
 
-  background: url("../img/delivery.svg") no-repeat center center ;
+  background: url("../img/delivery.svg") no-repeat center center;
   content: "";
 }
 
@@ -775,7 +781,7 @@ ul.basket-navigation li{
   top: 10px;
   right: -230px;
 
-  background: url("../img/warranty.svg") no-repeat center center ;
+  background: url("../img/warranty.svg") no-repeat center center;
   content: "";
 }
 
@@ -788,7 +794,7 @@ ul.basket-navigation li{
   top: 10px;
   right: -230px;
 
-  background: url("../img/credit.svg") no-repeat center center ;
+  background: url("../img/credit.svg") no-repeat center center;
   content: "";
 }
 
@@ -1367,7 +1373,7 @@ ul.basket-navigation li{
   height: 560px;
 }
 
-.modal-map p {
+.modal-map p{
   position: absolute;
   top: 0;
   left: 0;
@@ -1376,7 +1382,7 @@ ul.basket-navigation li{
   margin: 0;
 }
 
-.modal-map iframe {
+.modal-map iframe{
   position: relative;
   z-index: 2;
 
@@ -1607,8 +1613,8 @@ header.inner-header{
   width: 22px;
   height: 22px;
 
-  top: 54px;
-  left: -11px;
+  top: 49px;
+  left: -6px;
 }
 
 .range-wrapper button::before{
@@ -1630,6 +1636,10 @@ header.inner-header{
 
 .range-wrapper .range-max{
   left: 110px;
+}
+
+.range-wrapper .range-max:active{
+	left: 110px;
 }
 
 .range-wrapper span{
@@ -1785,7 +1795,7 @@ input[type="radio"]:disabled + label.bluetooth-choice-label{
   right: 100%;
   top: 0;
   height: 70px;
-  width: calc((100vw - 1160px) / 2);
+  /* width: calc((100vw - 1160px) / 2); */
 
   background-color: #dbdbdb;
   content: "";
@@ -1811,7 +1821,7 @@ input[type="radio"]:disabled + label.bluetooth-choice-label{
   left: 100%;
   top: 0;
   height: 70px;
-  width: calc((100vw - 1160px) / 2);
+  /* width: calc((100vw - 1160px) / 2.1); */
 
   background-color: #ebebeb;
   content: "";
@@ -1925,6 +1935,8 @@ input[type="radio"]:disabled + label.bluetooth-choice-label{
 .catalog-items .item-price{
   margin-top: 23px;
 
+  font-family: Gilroy;
+  font-weight: 300;
   font-size: 16px;
   line-height: 24px;
   letter-spacing: 0.5px;
@@ -2023,9 +2035,6 @@ input[type="radio"]:disabled + label.bluetooth-choice-label{
   margin-left: 8.8%;
   margin-bottom: 75px;
 
-  padding-left: 30px;
-  padding-right: 25px;
-
   line-height: 70px;
 
   background-color: #ebebeb;
@@ -2073,6 +2082,10 @@ input[type="radio"]:disabled + label.bluetooth-choice-label{
   display: block;
   height: 70px;
   line-height: 70px;
+}
+
+.catalog-navigation a.transition-direction:first-child{
+  padding-left: 30px;
 }
 
 .catalog-navigation a.transition-direction:hover{
